--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 	
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
+	<meta name="author" content="Abby de Best">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<title>Howdy FED2324</title>
