Changes menu and read me

--- a/index.html
+++ b/index.html
@@ -1,19 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-	
+
+<!-- ///////////////////-->
+<!-- 🪩🪩🪩 HEADER 🪩🪩🪩 -->
+<!-- ///////////////////-->
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="author" content="Abby de Best">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2324</title>
+	<title>Ganni Home Page</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
+<!-- ///////////////////-->
+<!-- 🔥🔥🔥 BODY 🔥🔥🔥 -->
+<!-- ///////////////////-->
+
 <body>
-	<h1>Howdy FED2324</h1>
+	<header>
+		<section>
+			<p>Our new pre-spring 24 collection is here 🩰🎀 enjoy free standard shipping on orders over €200</p>
+		</section>
+		<nav>
+			<ul>
+				<li>
+					<img src="images/Ganni-logo.svg" alt="Direct to home page ganni, with ganni logo">
+				</li>
+				<li>
+					<ul>
+						<li>
+							<a href="">New in</a>
+						</li>
+						<li>
+							<a href="">
+								<p>Clothing</p>
+							</a>
+						</li>
+						<li>
+							<a href="">
+								<p>Dresses</p>
+							</a>
+						</li>
+						<li>
+							<a href="">
+								<p>Shoes</p>
+							</a>
+						</li>	
+						<li>
+							<a href="">
+								<p>Bags</p>
+							</a>
+						</li>	
+						<li>
+							<a href="">
+								<p>Accessoires</p>
+							</a>
+						</li>	
+						<li>
+							<a href="">Ganni <span>icons</span>
+							</a>
+						</li>	
+						<li>
+							<a href="">
+								<p>Ganni gifts</p>
+							</a>
+						</li>		
+					</ul>
+				</li>
+				<li class="icons">
+					<img src="images/Heart-small.svg" alt="Go to your wishlist/favorites page">
+					<img src="images/Profile.svg" alt="Go to your profile page">
+					<img src="images/Shoppingbag.svg" alt="Go to your shopping bag page">
+				</li>
+				<li>
+					<button class="search">
+						<p>Search</p>
+					</button>
+				</li>
+			</ul>
+		</nav>
+	</header>
+	<h1>Our new collection is here!</h1>
 
 	<script defer src="scripts/script.js"></script>
 </body>
