--- a/tint-denim-mini-dress.html
+++ b/tint-denim-mini-dress.html
@@ -2,22 +2,14 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="author" content="Abby de Best">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<title>Ganni Home Page</title>
-	
-	<link href="styles/style.css" rel="stylesheet">
-	<!-- <link rel="icon" type="image/svg+xml" href="images/favicon.svg"> -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <title>Tint denim mini dress product details Page</title>
+	
+	<link href="styles/product-details.css" rel="stylesheet">
 </head>
-
 <body>
-
-<!-- ///////////////////-->
-<!-- 🪩🪩🪩 HEADER 🪩🪩🪩 -->
-<!-- ///////////////////-->
 
 	<header>
 
@@ -211,270 +203,17 @@
 		</nav>
 	</header>
 
-<!-- ////////////////////-->
-<!-- 💗💗💗 BANNER 💗💗💗 -->
-<!-- ////////////////////-->
+<!-- /////////////////////////// -->
+<!-- 🐆🐆🐆 PRODUCT BANNER 🐆🐆🐆 -->
+<!-- /////////////////////////// -->
 
-	<section class="banner">
-		<img src="/images/Gannibanner.jpeg" alt="">
-		<h1>Our new collection is here!</h1>
-		<a href="https://www.ganni.com/en-nl/new-in/" class="shop">
-			<h2>Shop new in</h2>
-			<img src="/images/Arrowright.svg" alt="Arrow pointing to the right icon">
-		</a>
+	<section class="product-banner">
+		<img src="images/J1376-091-1.jpg" alt="Tint denim mini dress">
 	</section>
 
-<!-- ///////////////////// -->
-<!-- 🫶🏼🫶🏼🫶🏼 Carousel 🫶🏼🫶🏼🫶🏼 -->
-<!-- ///////////////////// -->
 
-	<section class="slider">
-		<h3>New in</h3>
-			<article class="slides">
-				<a href=""><img src="/images/Left.svg" alt=""></a>
-				<article id="slide1">
-					<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
-					<a href="">
-						<img src="/images/F8683-019-1.jpg" alt="">
-						<h4>Brown brushed alpaca o-neck sweater</h4>
-						<h4>€225</h4>
-					</a>
-					<p>New</p>
-					<button>Add to bag</button>
-				</article>
-				<article id="slide2">
-					<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
-					<a href="/tint-denim-mini-dress.html" aria-label="Press to go to Tint denim mini dress €225">
-						<img src="images/J1376-091-1.jpg" alt="">
-						<h4>Tint denim mini dress</h4>
-						<h4>€225</h4>
-					</a>
-					<p>New</p>
-					<button>Add to bag</button>
-				</article>
-				<article id="slide3">
-					<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
-					<a href="" aria-label="Press to go to leopard betzy cropped jeans">
-						<img src="/images/J1059-943-1.jpg" alt="">
-						<h4>Leopard betzy cropped jeans</h4>
-						<h4>€195</h4>
-					</a>
-					<p>New</p>
-					<p>Ganni icon</p>
-					<button>Add to bag</button>
-				</article>
-				<article id="slide4">
-					<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
-					<a href="">
-						<img src="/images/F8544-099-1.jpg" alt="">
-						<h4>Oversized tech puffer coat</h4>
-						<h4>€495</h4>
-					</a>
-					<button>Add to bag</button>
-				</article>
-				<article id="slide5">
-					<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
-					<a href="">
-						<img src="/images/J1352-055-1.jpg" alt="">
-						<h4>Snow washed denim angi jeans</h4>
-						<h4>€275</h4>
-					</a>
-					<button>Add to bag</button>
-				</article>
-				<article id="slide6">
-					<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
-					<a href="">
-						<img src="/images/F9182-016-1.jpg" alt="">
-						<h4>Streched striped belt blazer</h4>
-						<h4>€395</h4>
-					</a>
-					<p>New</p>
-					<p>Exclusive</p>
-					<button>Add to bag</button>
-				</article>
-				<a href="#slide2" target="2"><img src="/images/Right.svg" alt=""></a>
-			</article>
-			<a href="" class="shop">
-				<h4>Shop now</h4>
-				<img src="/images/Arrowright.svg" alt="">
-			</a>
-	</section>
 
-	<!-- //////////////////// -->
-	<!-- 👀👀👀 Gallery 👀👀👀 -->
-	<!-- //////////////////// -->
 
-	<section class="gallery">
-		<article class="image">
-			<a href="">
-				<img src="/images/09_STILL_LIFE_GANNI_0218__5500px.jpg" alt="">
-				<p>shop shoes</p>
-			</a>
-		</article>
-		<article class="image">
-			<a href="">
-				<img src="/images/wk48bags2.jpg" alt="">
-				<p>shop bags</p> 
-			</a>
-		</article>
-		<article class="image">
-			<a href="">
-				<img src="/images/ps-24-07.jpg" alt="">
-				<p>shop now</p>
-			</a>
-		</article>
-		<article>
-			<a href="">
-				<h5>Icons only</h5>
-				<h6>These are the pieces to have on your radar now and forever</h6>
-			</a>
-		</article>
-		<section class="slider">
-			<article class="slides">
-			<article>
-				<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
-				<a href="">
-					<img src="/images/S2427-018-1.jpg" alt="">
-					<h4>Silver mid shaft embroidered western boots</h4>
-					<h4>€645</h4>
-				</a>
-				<p>Coming soon</p>
-				<button>Add to bag</button>
-			</article>
-			<article>
-				<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
-				<a href="">
-					<img src="/images/F8625-494-1.jpg" alt="">
-					<h4>3D sequins maxi dress</h4>
-					<h4>€545</h4>
-				</a>
-				<button>Add to bag</button>
-			</article>
-			<article>
-				<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
-				<a href="">
-					<img src="/images/A5379-099-1.jpg" alt="">
-					<h4>Black mini ganni bou bag</h4>
-					<h4>€295</h4>
-				</a>
-				<button>Add to bag</button>
-			</article>
-			<article>
-				<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
-				<a href="">
-					<img src="/images/T3768-151-1.jpg" alt="">
-					<h4>White relaxed lemon t-shirt</h4>
-					<h4>€110</h4>
-				</a>
-				<p>Extended sizing</p>
-				<button>Add to bag</button>
-			</article>
-			<article>
-				<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
-				<a href="">
-					<img src="/images/A5369-196-1.jpg" alt="">
-					<h4>Sand fitted wool rib knit beanie</h4>
-					<h4>€75</h4>
-				</a>
-				<button>Add to bag</button>
-			</article>
-			<article>
-				<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
-				<a href="">
-					<img src="/images/J1371-055-1.jpg" alt="">
-					<h4>Snow washed denim a-line mini dress</h4>
-					<h4>€265</h4>
-				</a>
-				<button>Add to bag</button>
-			</article>
-		</article>
-	</section>
-		<a href="" class="shop">
-			<h2>Shop icons</h2>
-			<img src="/images/Arrowright.svg" alt="">
-		</a>
-	</section>
-	<section class="shopthelook">
-		<h2>Shop the look</h2>
-		<section class="slider">
-			<article class="slides">
-				<article>
-					<a href="">
-						<img src="/images/F8683-019-1.jpg" alt="">
-					</a>
-					<button>Shop now</button>
-				</article>
-				<article>
-					<a href="">
-						<img src="images/F8829-099-1.jpg" alt="">
-					</a>
-					<button>Shop now</button>
-				</article>
-				<article>
-					<a href="">
-						<img src="/images/F8861-859-1.jpg" alt="">
-					</a>
-					<button>Shop now</button>
-				</article>
-				<article>
-					<a href="">
-					</a>
-					<button>Shop now</button>
-				</article>
-				<article>
-					<a href="">
-						<img src="" alt="">
-					</a>
-					<button>Shop now</button>
-				</article>
-				<article>
-					<a href="">
-						<img src="" alt="">
-					</a>
-					<button>Shop now</button>
-				</article>
-			</article>
-		</section>
-		<a href="" class="shop">
-			<h2>Shop the look</h2>
-			<img src="/images/Arrowright.svg" alt="">
-		</a>
-	</section>
-	<section class="ganniworld">
-		<article>
-			<a href="">
-				<img src="/images/hp-image-03.jpg" alt="">
-			</a>
-			<h6>Ganni world</h6>
-			<h6>Discover the GANNI universe with style and everyday inspiration from our GANNI Girl community</h6>
-			<a href="" class="shop">
-					<h2>Discover more</h2>
-					<img src="/images/Arrowright.svg" alt="">
-			</a>
-		</article>
-		<article>
-			<a href="">
-			<img src="/images/hp-image-04.jpg" alt="">
-			</a>
-			<h6>Come say hi</h6>
-			<h6>Head to your local store where Team GANNI will walk you through our latest collections + hottest arrivals and get inspired by their new season favourites</h6>
-			<a href="" class="shop">
-					<h2>Find store</h2>
-					<img src="/images/Arrowright.svg" alt="">
-			</a>
-		</article>
-		<article>
-			<a href="">
-			<img src="/images/hp-image-02.jpg" alt="">
-			</a>
-			<h6>Our journey to do better</h6>
-			<h6>Our focus is becoming the most responsible version of ourselves. GANNI's Fabics of The Future initiative helps us explore designing with alternative annovative fabrics.</h6>
-			<a href="" class="shop">
-				<h2>Learn more</h2>
-				<img src="/images/Arrowright.svg" alt="">
-			</a>
-		</article>
-	</section>
 	<footer>
 		<ul>
 			<li>
@@ -646,10 +385,8 @@
 
 	</footer>
 
-	
 
 
-	<script defer src="scripts/script.js"></script>
+    <script defer src="scripts/script.js"></script>
 </body>
-	
 </html>
