Read me & product details

--- a/index.html
+++ b/index.html
@@ -400,36 +400,37 @@
 			<article class="slides">
 				<article>
 					<a href="">
-						<img src="/images/F8683-019-1.jpg" alt="">
+						<img src="/images/ps-24-07.jpg" alt="">
 					</a>
 					<button>Shop now</button>
 				</article>
 				<article>
 					<a href="">
-						<img src="images/F8829-099-1.jpg" alt="">
+						<img src="images/ps-24-05.jpg" alt="">
 					</a>
 					<button>Shop now</button>
 				</article>
 				<article>
 					<a href="">
-						<img src="/images/F8861-859-1.jpg" alt="">
+						<img src="/images/ps-24-10.jpg" alt="">
 					</a>
 					<button>Shop now</button>
 				</article>
 				<article>
 					<a href="">
+						<img src="/images/shop-the-look-drop2-01.jpg" alt="">
 					</a>
 					<button>Shop now</button>
 				</article>
 				<article>
 					<a href="">
-						<img src="" alt="">
+						<img src="/images/A3121-099-8.jpg" alt="">
 					</a>
 					<button>Shop now</button>
 				</article>
 				<article>
 					<a href="">
-						<img src="" alt="">
+						<img src="/images/ps-24-09.jpg" alt="">
 					</a>
 					<button>Shop now</button>
 				</article>
@@ -448,8 +449,8 @@
 			<h6>Ganni world</h6>
 			<h6>Discover the GANNI universe with style and everyday inspiration from our GANNI Girl community</h6>
 			<a href="" class="shop">
-					<h2>Discover more</h2>
-					<img src="/images/Arrowright.svg" alt="">
+				<h2>Discover more</h2>
+				<img src="/images/Arrowright.svg" alt="">
 			</a>
 		</article>
 		<article>
@@ -459,8 +460,8 @@
 			<h6>Come say hi</h6>
 			<h6>Head to your local store where Team GANNI will walk you through our latest collections + hottest arrivals and get inspired by their new season favourites</h6>
 			<a href="" class="shop">
-					<h2>Find store</h2>
-					<img src="/images/Arrowright.svg" alt="">
+				<h2>Find store</h2>
+				<img src="/images/Arrowright.svg" alt="">
 			</a>
 		</article>
 		<article>
