--- a/tint-denim-mini-dress.html
+++ b/tint-denim-mini-dress.html
@@ -209,8 +209,27 @@
 
 	<section class="product-banner">
 		<img src="images/J1376-091-1.jpg" alt="Tint denim mini dress">
+		<h1>Tint denim mini dress</h1>
+		<h2>€255</h2>
+		<p>New</p>
 	</section>
-
+	<section>
+		<h2>Tint wash</h2>
+		<img src="/images/J1376-091-1 (1).jpg" alt="">
+		<img src="/images/F8602-358-1 (1).jpg" alt="">
+		<h2>Size</h2>
+		<h2>Fit finder</h2>
+		<button>32</button>
+		<button>34</button>
+		<button>36</button>
+		<button>38</button>
+		<button>40</button>
+		<button>42</button>
+		<button>44</button>
+		<h2>Size guide</h2>
+		<button class="button-add-to-bag">Add to bag<span>€255</span></button>
+		<button class="find-in-store">Find in store</button>
+	</section>
 
 
 
