--- a/index.html
+++ b/index.html
@@ -306,25 +306,25 @@
 
 	<section class="gallery">
 		<article class="image">
-			<a href="">
-				<img src="/images/09_STILL_LIFE_GANNI_0218__5500px.jpg" alt="">
+			<a href="https://www.ganni.com/en-nl/shoes/">
+				<img src="/images/09_STILL_LIFE_GANNI_0218__5500px.jpg" alt="Picture of black ganni cowboy boots">
 				<p>shop shoes</p>
 			</a>
 		</article>
 		<article class="image">
-			<a href="">
-				<img src="/images/wk48bags2.jpg" alt="">
+			<a href="https://www.ganni.com/en-nl/bags/">
+				<img src="/images/wk48bags2.jpg" alt="Picture of black ganni Bou bag">
 				<p>shop bags</p> 
 			</a>
 		</article>
 		<article class="image">
-			<a href="">
-				<img src="/images/ps-24-07.jpg" alt="">
+			<a href="https://www.ganni.com/en-nl/new-in/" aria-label="Press to shop the new pre-spring 24 collection">
+				<img src="/images/ps-24-07.jpg" alt="Picture of an outfit from the new 24 pre-spring collection">
 				<p>shop now</p>
 			</a>
 		</article>
 		<article>
-			<a href="">
+			<a href="https://www.ganni.com/en-nl/ganni-icons/" aria-label="Press to shop Ganni icons">
 				<h5>Icons only</h5>
 				<h6>These are the pieces to have on your radar now and forever</h6>
 			</a>
@@ -333,8 +333,8 @@
 			<article class="slides">
 			<article>
 				<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
-				<a href="">
-					<img src="/images/S2427-018-1.jpg" alt="">
+				<a href="https://www.ganni.com/en-nl/silver-mid-shaft-embroidered-western-boots-silver-S242701836.html">
+					<img src="/images/S2427-018-1.jpg" alt="Silver mid shaft embroidered western boots €645">
 					<h4>Silver mid shaft embroidered western boots</h4>
 					<h4>€645</h4>
 				</a>
@@ -343,8 +343,8 @@
 			</article>
 			<article>
 				<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
-				<a href="">
-					<img src="/images/F8625-494-1.jpg" alt="">
+				<a href="https://www.ganni.com/en-nl/3d-sequins-maxi-dress-F8625.html?dwvar_F8625_color=Mauve%20Chalk">
+					<img src="/images/F8625-494-1.jpg" alt="3D sequins maxi dress €545">
 					<h4>3D sequins maxi dress</h4>
 					<h4>€545</h4>
 				</a>
@@ -352,8 +352,8 @@
 			</article>
 			<article>
 				<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
-				<a href="">
-					<img src="/images/A5379-099-1.jpg" alt="">
+				<a href="https://www.ganni.com/en-nl/black-mini-ganni-bou-bag-black-A537909900.html">
+					<img src="/images/A5379-099-1.jpg" alt="Black mini ganni bou bag €295">
 					<h4>Black mini ganni bou bag</h4>
 					<h4>€295</h4>
 				</a>
@@ -361,8 +361,8 @@
 			</article>
 			<article>
 				<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
-				<a href="">
-					<img src="/images/T3768-151-1.jpg" alt="">
+				<a href="https://www.ganni.com/en-nl/white-relaxed-lemon-t-shirt-T3768.html?dwvar_T3768_color=Bright%20White">
+					<img src="/images/T3768-151-1.jpg" alt="White relaxed lemon t-shirt €110">
 					<h4>White relaxed lemon t-shirt</h4>
 					<h4>€110</h4>
 				</a>
@@ -371,8 +371,8 @@
 			</article>
 			<article>
 				<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
-				<a href="">
-					<img src="/images/A5369-196-1.jpg" alt="">
+				<a href="https://www.ganni.com/en-nl/search?q=Sand%20fitted%20wool%20rib%20knit%20beanie">
+					<img src="/images/A5369-196-1.jpg" alt="Sand fitted wool rib knit beanie €75">
 					<h4>Sand fitted wool rib knit beanie</h4>
 					<h4>€75</h4>
 				</a>
@@ -380,8 +380,8 @@
 			</article>
 			<article>
 				<button><img src="/images/Heart-big.svg" alt="button add product to wishlist"></button>
-				<a href="">
-					<img src="/images/J1371-055-1.jpg" alt="">
+				<a href="https://www.ganni.com/en-nl/snow-washed-denim-a-line-mini-dress-J1371.html?dwvar_J1371_color=Black%20Washed">
+					<img src="/images/J1371-055-1.jpg" alt="Snow washed denim a-line mini dress €265">
 					<h4>Snow washed denim a-line mini dress</h4>
 					<h4>€265</h4>
 				</a>
@@ -389,9 +389,9 @@
 			</article>
 		</article>
 	</section>
-		<a href="" class="shop">
+		<a href="https://www.ganni.com/en-nl/ganni-icons//" class="shop">
 			<h2>Shop icons</h2>
-			<img src="/images/Arrowright.svg" alt="">
+			<img src="/images/Arrowright.svg" alt="Arrow pointing to the right icon">
 		</a>
 	</section>
 	<section class="shopthelook">
@@ -399,80 +399,80 @@
 		<section class="slider">
 			<article class="slides">
 				<article>
-					<a href="">
-						<img src="/images/ps-24-07.jpg" alt="">
+					<a href="https://www.ganni.com/en-nl/look-07-Shop+Pre%2DSpring+07.html" aria-label="Press to see and shop look 7 in silver">
+						<img src="/images/ps-24-07.jpg" alt="Look 7 in silver">
 					</a>
 					<button>Shop now</button>
 				</article>
 				<article>
-					<a href="">
-						<img src="images/ps-24-05.jpg" alt="">
+					<a href="https://www.ganni.com/en-nl/look-05-Shop+Pre%2DSpring+05.html" aria-label="Press to see and shop look 5 with a black suit">
+						<img src="images/ps-24-05.jpg" alt="Look 5 with a black suit">
 					</a>
 					<button>Shop now</button>
 				</article>
 				<article>
-					<a href="">
-						<img src="/images/ps-24-10.jpg" alt="">
+					<a href="https://www.ganni.com/en-nl/look-010-Shop+Pre%2DSpring+010.html" aria-label="Press to see and shop look 10 with silver 3D sequin dressr">
+						<img src="/images/ps-24-10.jpg" alt="Look 10 with silver 3D sequin dressr">
 					</a>
 					<button>Shop now</button>
 				</article>
 				<article>
-					<a href="">
-						<img src="/images/shop-the-look-drop2-01.jpg" alt="">
+					<a href="https://www.ganni.com/en-nl/look-15-Shop+Pre%2DSpring+15.html" aria-label="Press to see and shop look 15 with denim and brown bou bag">
+						<img src="/images/shop-the-look-drop2-01.jpg" alt="Look 15 with denim and brown bou bag">
 					</a>
 					<button>Shop now</button>
 				</article>
 				<article>
-					<a href="">
-						<img src="/images/A3121-099-8.jpg" alt="">
+					<a href="https://www.ganni.com/en-nl/look-08-Shop+Pre%2DSpring+08.html" aria-label="Press to see and shop look 8 with black long dress">
+						<img src="/images/A3121-099-8.jpg" alt="Look 8 with black long dress">
 					</a>
 					<button>Shop now</button>
 				</article>
 				<article>
-					<a href="">
-						<img src="/images/ps-24-09.jpg" alt="">
+					<a href="https://www.ganni.com/en-nl/look-09-Shop+Pre%2DSpring+09.html" aria-label="Press to see and shop look 9 with wool coat">
+						<img src="/images/ps-24-09.jpg" alt="Look 9 with wool coat">
 					</a>
 					<button>Shop now</button>
 				</article>
 			</article>
 		</section>
-		<a href="" class="shop">
+		<a href="https://www.ganni.com/en-nl/shop-the-look/" class="shop">
 			<h2>Shop the look</h2>
-			<img src="/images/Arrowright.svg" alt="">
+			<img src="/images/Arrowright.svg" alt="Arrow pointing to the right icon">
 		</a>
 	</section>
 	<section class="ganniworld">
 		<article>
-			<a href="">
-				<img src="/images/hp-image-03.jpg" alt="">
+			<a href="https://www.ganni.com/en-nl/ganni-girls-around-the-world.html" aria-label="Press to see what Ganni girls are wearing">
+				<img src="/images/hp-image-03.jpg" alt="A Ganni girl">
 			</a>
 			<h6>Ganni world</h6>
 			<h6>Discover the GANNI universe with style and everyday inspiration from our GANNI Girl community</h6>
-			<a href="" class="shop">
+			<a href="https://www.ganni.com/en-nl/ganni-girls-around-the-world.html" class="shop" aria-label="Press to see what Ganni girls are wearing">
 				<h2>Discover more</h2>
-				<img src="/images/Arrowright.svg" alt="">
+				<img src="/images/Arrowright.svg" alt="Arrow pointing to the right icon">
 			</a>
 		</article>
 		<article>
-			<a href="">
-			<img src="/images/hp-image-04.jpg" alt="">
+			<a href="https://www.ganni.com/en-nl/stores-find" aria-label="Press to find a store close to you">
+			<img src="/images/hp-image-04.jpg" alt="Interior of a Ganni store">
 			</a>
 			<h6>Come say hi</h6>
 			<h6>Head to your local store where Team GANNI will walk you through our latest collections + hottest arrivals and get inspired by their new season favourites</h6>
-			<a href="" class="shop">
+			<a href="https://www.ganni.com/en-nl/stores-find" class="shop" aria-label="Press to find a store close to you">
 				<h2>Find store</h2>
-				<img src="/images/Arrowright.svg" alt="">
+				<img src="/images/Arrowright.svg" alt="Arrow pointing to the right icon">
 			</a>
 		</article>
 		<article>
-			<a href="">
+			<a href="https://www.ganni.com/en-nl/responsibility.html" aria-label="Press to read how we take on responsibility">
 			<img src="/images/hp-image-02.jpg" alt="">
 			</a>
 			<h6>Our journey to do better</h6>
 			<h6>Our focus is becoming the most responsible version of ourselves. GANNI's Fabics of The Future initiative helps us explore designing with alternative annovative fabrics.</h6>
-			<a href="" class="shop">
+			<a href="https://www.ganni.com/en-nl/responsibility.html" class="shop" aria-label="Press to read how we take on responsibility">
 				<h2>Learn more</h2>
-				<img src="/images/Arrowright.svg" alt="">
+				<img src="/images/Arrowright.svg" alt="Arrow pointing to the right icon">
 			</a>
 		</article>
 	</section>
